--- a/config.yml
+++ b/config.yml
@@ -8,17 +8,18 @@
 #   - MLP (input, width, ... , width, output)
 Network_parameters:
   Encoder:
-    layers: ["Linear", "MultiHeadAttention", "MultiHeadAttention", "MultiHeadAttention", "Sum", "Linear"]
-    dimensions: [[2, 64], [64], [64], [64], [], [64, 64]]
-    latent_dimension: 100
+    layers: ["MLP", "MultiHeadAttention", "Linear", "MLP"]
+    dimensions: [[2, 32], [32], [32, 32], [32, 32]]
+    latent_dimension: 64
   Decoder:
-    layers: ["Linear", "MultiHeadAttention", "MultiHeadAttention", "MultiHeadAttention", "Linear"]
-    dimensions: [[102, 64], [64], [64], [64], [64, 2]]
+    layers: ["MLP", "MultiHeadAttention", "Linear", "MLP"]
+    dimensions: [[2, 32], [32], [32, 32], [32, 32]]
   MultiHeadAttention:
-    n_head: 3
-    head_width: 32
-  # Chamfer, Hungarian, HungarianVAE, ChamferVAE
-  Loss: "ChamferVAE"
+    n_head: 5
+    head_width: 16
+  Residuals: True
+  # HungarianVAE, ChamferVAE
+  Loss: "HungarianVAE"
 
 Baseline_parameters:
   Encoder:
@@ -32,7 +33,7 @@ DataSet_parameters:
   # CovMatrix or RecTriangle
   type: "CovMatrix"
   size: 100
-  n_points: 80
+  n_points: 200
   n_feature: 2
 
 Run_parameters:
